--- a/web/account.html
+++ b/web/account.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html>
 <head>
-<title>Eshop a Flat E-Commerce Bootstrap Responsive Website Template | Home :: w3layouts</title>
+<title>Eshop a Flat E-Commerce Bootstrap Responsive Website Template | Account :: w3layouts</title>
 <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="js/jquery.min.js"></script>
@@ -42,7 +42,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="header-right">
 						<div class="cart box_1">
 							<a href="checkout.html">
-								<h3> <span class="simpleCart_total"> $0.00 </span> (<span id="simpleCart_quantity" class="simpleCart_quantity"> 0 </span>)<img src="images/bag.png" alt=""></h3>
+								<h3> <span class="simpleCart_total"> $0.00 </span> (<span id="simpleCart_quantity" class="simpleCart_quantity"> 0 </span> items)<img src="images/bag.png" alt=""></h3>
 							</a>	
 							<p><a href="javascript:;" class="simpleCart_empty">Empty cart</a></p>
 							<div class="clearfix"> </div>
@@ -53,8 +53,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>
 	</div>
 	<!-- header-section-ends -->
-			<div class="banner-top">
+	<div class="inner-banner">
 		<div class="container">
+			<div class="banner-top inner-head">
 				<nav class="navbar navbar-default" role="navigation">
 	    <div class="navbar-header">
 	        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -190,236 +191,53 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</nav>
 	<!--/.navbar-->
 </div>
-</div>
-	<div class="banner">
-		<div class="container">
-<div class="banner-bottom">
-	<div class="banner-bottom-left">
-		<h2>B<br>U<br>Y</h2>
-	</div>
-	<div class="banner-bottom-right">
-		<div  class="callbacks_container">
-					<ul class="rslides" id="slider4">
-					<li>
-								<div class="banner-info">
-									<h3>Smart But Casual</h3>
-									<p>Start your shopping here...</p>
-								</div>
-							</li>
-							<li>
-								<div class="banner-info">
-								   <h3>Shop Online</h3>
-									<p>Start your shopping here...</p>
-								</div>
-							</li>
-							<li>
-								<div class="banner-info">
-								  <h3>Pack your Bag</h3>
-									<p>Start your shopping here...</p>
-								</div>								
-							</li>
-						</ul>
-					</div>
-					<!--banner-->
-	  			<script src="js/responsiveslides.min.js"></script>
-			 <script>
-			    // You can also use "$(window).load(function() {"
-			    $(function () {
-			      // Slideshow 4
-			      $("#slider4").responsiveSlides({
-			        auto: true,
-			        pager:true,
-			        nav:false,
-			        speed: 500,
-			        namespace: "callbacks",
-			        before: function () {
-			          $('.events').append("<li>before event fired.</li>");
-			        },
-			        after: function () {
-			          $('.events').append("<li>after event fired.</li>");
-			        }
-			      });
-			
-			    });
-			  </script>
-	</div>
-	<div class="clearfix"> </div>
-</div>
-	<div class="shop">
-		<a href="single.html">SHOP COLLECTION NOW</a>
-	</div>
 	</div>
 		</div>
-		<!-- content-section-starts-here -->
-		<div class="container">
-			<div class="main-content">
-				<div class="online-strip">
-					<div class="col-md-4 follow-us">
-						<h3>follow us : <a class="twitter" href="#"></a><a class="facebook" href="#"></a></h3>
-					</div>
-					<div class="col-md-4 shipping-grid">
-						<div class="shipping">
-							<img src="images/shipping.png" alt="" />
-						</div>
-						<div class="shipping-text">
-							<h3>Free Shipping</h3>
-							<p>on orders over $ 199</p>
-						</div>
-						<div class="clearfix"></div>
-					</div>
-					<div class="col-md-4 online-order">
-						<p>Order online</p>
-						<h3>Tel:999 4567 8902</h3>
-					</div>
-					<div class="clearfix"></div>
-				</div>
-				<div class="products-grid">
-				<header>
-					<h3 class="head text-center">Latest Products</h3>
-				</header>
-					<div class="col-md-4 product simpleCart_shelfItem text-center">
-						<a href="single.html"><img src="images/p1.jpg" alt="" /></a>
-						<div class="mask">
-							<a href="single.html">Quick View</a>
-						</div>
-						<a class="product_name" href="single.html">Sed ut perspiciatis</a>
-						<p><a class="item_add" href="#"><i></i> <span class="item_price">$329</span></a></p>
-					</div>
-					<div class="col-md-4 product simpleCart_shelfItem text-center">
-						<a href="single.html"><img src="images/p2.jpg" alt="" /></a>
-						<div class="mask">
-							<a href="single.html">Quick View</a>
-						</div>
-						<a class="product_name" href="single.html">great explorer</a>
-						<p><a class="item_add" href="#"><i></i> <span class="item_price">$599.8</span></a></p>
-					</div>
-					<div class="col-md-4 product simpleCart_shelfItem text-center">
-						<a href="single.html"><img src="images/p3.jpg" alt="" /></a>
-						<div class="mask">
-							<a href="single.html">Quick View</a>
-						</div>
-						<a class="product_name" href="single.html">similique sunt</a>
-						<p><a class="item_add" href="#"><i></i> <span class="item_price">$359.6</span></a></p>
-					</div>
-					<div class="col-md-4 product simpleCart_shelfItem text-center">
-						<a href="single.html"><img src="images/p4.jpg" alt="" /></a>
-						<div class="mask">
-							<a href="single.html">Quick View</a>
-						</div>
-						<a class="product_name" href="single.html">shrinking </a>
-						<p><a class="item_add" href="#"><i></i> <span class="item_price">$649.99</span></a></p>
-					</div>
-					<div class="col-md-4 product simpleCart_shelfItem text-center">
-						<a href="single.html"><img src="images/p5.jpg" alt="" /></a>
-						<div class="mask">
-							<a href="single.html">Quick View</a>
-						</div>
-						<a class="product_name" href="single.html">perfectly simple</a>
-						<p><a class="item_add" href="#"><i></i> <span class="item_price">$750</span></a></p>
-					</div>
-					<div class="col-md-4 product simpleCart_shelfItem text-center">
-						<a href="single.html"><img src="images/p6.jpg" alt="" /></a>
-						<div class="mask">
-							<a href="single.html">Quick View</a>
-						</div>
-						<a class="product_name" href="single.html">equal blame</a>
-						<p><a class="item_add" href="#"><i></i> <span class="item_price">$295.59</span></a></p>
-					</div>
-					<div class="col-md-4 product simpleCart_shelfItem text-center">
-						<a href="single.html"><img src="images/p7.jpg" alt="" /></a>
-						<div class="mask">
-							<a href="single.html">Quick View</a>
-						</div>
-						<a class="product_name" href="single.html">Neque porro</a>
-						<p><a class="item_add" href="#"><i></i> <span class="item_price">$380</span></a></p>
-					</div>
-					<div class="col-md-4 product simpleCart_shelfItem text-center">
-						<a href="single.html"><img src="images/p8.jpg" alt="" /></a>
-						<div class="mask">
-							<a href="single.html">Quick View</a>
-						</div>
-						<a class="product_name" href="single.html">perfectly simple</a>
-						<p><a class="item_add" href="#"><i></i> <span class="item_price">$540.6</span></a></p>
-					</div>
-					<div class="col-md-4 product simpleCart_shelfItem text-center">
-						<a href="single.html"><img src="images/p9.jpg" alt="" /></a>
-						<div class="mask">
-							<a href="single.html">Quick View</a>
-						</div>
-						<a class="product_name" href="single.html">praising pain</a>
-						<p><a class="item_add" href="#"><i></i> <span class="item_price">$229.5</span></a></p>
-					</div>
-					<div class="clearfix"></div>
-				</div>
-			</div>
-
-		</div>
-		<div class="other-products">
-		<div class="container">
-			<h3 class="like text-center">Featured Collection</h3>        			
-				     <ul id="flexiselDemo3">
-						<li><a href="single.html"><img src="images/l1.jpg" class="img-responsive" alt="" /></a>
-							<div class="product liked-product simpleCart_shelfItem">
-							<a class="like_name" href="single.html">perfectly simple</a>
-							<p><a class="item_add" href="#"><i></i> <span class=" item_price">$759</span></a></p>
-							</div>
-						</li>
-						<li><a href="single.html"><img src="images/l2.jpg" class="img-responsive" alt="" /></a>						
-							<div class="product liked-product simpleCart_shelfItem">
-							<a class="like_name" href="single.html">praising pain</a>
-							<p><a class="item_add" href="#"><i></i> <span class=" item_price">$699</span></a></p>
-							</div>
-						</li>
-						<li><a href="single.html"><img src="images/l3.jpg" class="img-responsive" alt="" /></a>
-							<div class="product liked-product simpleCart_shelfItem">
-							<a class="like_name" href="single.html">Neque porro</a>
-							<p><a class="item_add" href="#"><i></i> <span class=" item_price">$329</span></a></p>
-							</div>
-						</li>
-						<li><a href="single.html"><img src="images/l4.jpg" class="img-responsive" alt="" /></a>
-							<div class="product liked-product simpleCart_shelfItem">
-							<a class="like_name" href="single.html">equal blame</a>
-							<p><a class="item_add" href="#"><i></i> <span class=" item_price">$499</span></a></p>
-							</div>
-						</li>
-						<li><a href="single.html"><img src="images/l5.jpg" class="img-responsive" alt="" /></a>
-							<div class="product liked-product simpleCart_shelfItem">
-							<a class="like_name" href="single.html">perfectly simple</a>
-							<p><a class="item_add" href="#"><i></i> <span class=" item_price">$649</span></a></p>
-							</div>
-						</li>
-				     </ul>
-				    <script type="text/javascript">
-					 $(window).load(function() {
-						$("#flexiselDemo3").flexisel({
-							visibleItems: 4,
-							animationSpeed: 1000,
-							autoPlay: true,
-							autoPlaySpeed: 3000,    		
-							pauseOnHover: true,
-							enableResponsiveBreakpoints: true,
-					    	responsiveBreakpoints: { 
-					    		portrait: { 
-					    			changePoint:480,
-					    			visibleItems: 1
-					    		}, 
-					    		landscape: { 
-					    			changePoint:640,
-					    			visibleItems: 2
-					    		},
-					    		tablet: { 
-					    			changePoint:768,
-					    			visibleItems: 3
-					    		}
-					    	}
-					    });
-					    
-					});
-				   </script>
-				   <script type="text/javascript" src="js/jquery.flexisel.js"></script>
-				   </div>
-				   </div>
-		<!-- content-section-ends-here -->
+		<!-- content-section-starts -->
+	<div class="content">
+	<div class="container">
+		<div class="login-page">
+			    <div class="dreamcrub">
+			   	 <ul class="breadcrumbs">
+                    <li class="home">
+                       <a href="index.html" title="Go to Home Page">Home</a>&nbsp;
+                       <span>&gt;</span>
+                    </li>
+                    <li class="women">
+                       Login
+                    </li>
+                </ul>
+                <ul class="previous">
+                	<li><a href="index.html">Back to Previous Page</a></li>
+                </ul>
+                <div class="clearfix"></div>
+			   </div>
+			   <div class="account_grid">
+			   <div class="col-md-6 login-left wow fadeInLeft" data-wow-delay="0.4s">
+			  	 <h2>NEW CUSTOMERS</h2>
+				 <p>By creating an account with our store, you will be able to move through the checkout process faster, store multiple shipping addresses, view and track your orders in your account and more.</p>
+				 <a class="acount-btn" href="register.html">Create an Account</a>
+			   </div>
+			   <div class="col-md-6 login-right wow fadeInRight" data-wow-delay="0.4s">
+			  	<h3>REGISTERED CUSTOMERS</h3>
+				<p>If you have an account with us, please log in.</p>
+				<form>
+				  <div>
+					<span>Email Address<label>*</label></span>
+					<input type="text"> 
+				  </div>
+				  <div>
+					<span>Password<label>*</label></span>
+					<input type="password"> 
+				  </div>
+				  <a class="forgot" href="#">Forgot Your Password?</a>
+				  <input type="submit" value="Login">
+			    </form>
+			   </div>	
+			   <div class="clearfix"> </div>
+			 </div>
+		   </div>
+</div>
 		<div class="news-letter">
 			<div class="container">
 				<div class="join">
@@ -433,6 +251,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="clearfix"> </div>
 				</div>
 			</div>
+		</div>
 		</div>
 		<div class="footer">
 		<div class="container">
@@ -472,7 +291,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<li><a href="checkout.html">my shopping bag</a></li>
 						<li><a href="#">brands</a></li>
 						<li><a href="#">create wishlist</a></li>
-					</ul>				
+					</ul>	
 				</div>
 				<div class="col-md-3 span1_of_4">
 					<h4>popular</h4>
