--- a/web/register.html
+++ b/web/register.html
@@ -1,13 +1,7 @@
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
 <!DOCTYPE html>
 <html>
 <head>
-<title>Eshop a Flat E-Commerce Bootstrap Responsive Website Template | Home :: w3layouts</title>
+<title>Welcome</title>
 <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="js/jquery.min.js"></script>
@@ -35,16 +29,17 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="container">
 				<div class="header-top-left">
 					<ul>
-						<li><a href="account.html"><span class="glyphicon glyphicon-user"> </span>Login</a></li>
-						<li><a href="register.html"><span class="glyphicon glyphicon-lock"> </span>Create an Account</a></li>			
+<!--						<li><a href="account.html"><span class="glyphicon glyphicon-user"> </span>Login</a></li>-->
+<!--						<li><a href="register.html"><span class="glyphicon glyphicon-lock"> </span>Create an Account</a></li>			-->
 					</ul>
 				</div>
 				<div class="header-right">
 						<div class="cart box_1">
-							<a href="checkout.html">
+                                                    <a href="account.html"><span class="glyphicon glyphicon-user"> </span>Login</a>
+<!--							<a href="checkout.html">
 								<h3> <span class="simpleCart_total"> $0.00 </span> (<span id="simpleCart_quantity" class="simpleCart_quantity"> 0 </span>)<img src="images/bag.png" alt=""></h3>
-							</a>	
-							<p><a href="javascript:;" class="simpleCart_empty">Empty cart</a></p>
+							</a>	-->
+<!--							<p><a href="javascript:;" class="simpleCart_empty">Empty cart</a></p>-->
 							<div class="clearfix"> </div>
 						</div>
 				</div>
@@ -53,8 +48,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>
 	</div>
 	<!-- header-section-ends -->
-			<div class="banner-top">
+	<div class="inner-banner">
 		<div class="container">
+			<div class="banner-top inner-head">
 				<nav class="navbar navbar-default" role="navigation">
 	    <div class="navbar-header">
 	        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -72,7 +68,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	        <ul class="nav navbar-nav">
 			<li><a href="index.html">Home</a></li>
-		        <li class="dropdown">
+<!--		        <li class="dropdown">
 		            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Men <b class="caret"></b></a>
 		            <ul class="dropdown-menu multi-column columns-3">
 			            <div class="row">
@@ -113,8 +109,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<div class="clearfix"></div>
 			            </div>
 		            </ul>
-		        </li>
-		        <li class="dropdown">
+		        </li>-->
+<!--		        <li class="dropdown">
 		            <a href="#" class="dropdown-toggle" data-toggle="dropdown">women <b class="caret"></b></a>
 		            <ul class="dropdown-menu multi-column columns-3">
 			            <div class="row">
@@ -155,8 +151,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<div class="clearfix"></div>
 			            </div>
 		            </ul>
-		        </li>
-		        <li class="dropdown">
+		        </li>-->
+<!--		        <li class="dropdown">
 		        	<a href="#" class="dropdown-toggle" data-toggle="dropdown">kids <b class="caret"></b></a>
 		            <ul class="dropdown-menu multi-column columns-2">
 			            <div class="row">
@@ -181,245 +177,90 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<div class="clearfix"></div>
 			            </div>
 		            </ul>
-		        </li>
-					<li><a href="typography.html">TYPO</a></li>
-					<li><a href="contact.html">CONTACT</a></li>
+		        </li>-->
+					<li><a href="typography.html">Customer</a></li>
+					<li><a href="contact.html">Affiliate</a></li>
 	        </ul>
 	    </div>
 	    <!--/.navbar-collapse-->
 	</nav>
 	<!--/.navbar-->
 </div>
-</div>
-	<div class="banner">
-		<div class="container">
-<div class="banner-bottom">
-	<div class="banner-bottom-left">
-		<h2>B<br>U<br>Y</h2>
-	</div>
-	<div class="banner-bottom-right">
-		<div  class="callbacks_container">
-					<ul class="rslides" id="slider4">
-					<li>
-								<div class="banner-info">
-									<h3>Smart But Casual</h3>
-									<p>Start your shopping here...</p>
-								</div>
-							</li>
-							<li>
-								<div class="banner-info">
-								   <h3>Shop Online</h3>
-									<p>Start your shopping here...</p>
-								</div>
-							</li>
-							<li>
-								<div class="banner-info">
-								  <h3>Pack your Bag</h3>
-									<p>Start your shopping here...</p>
-								</div>								
-							</li>
-						</ul>
-					</div>
-					<!--banner-->
-	  			<script src="js/responsiveslides.min.js"></script>
-			 <script>
-			    // You can also use "$(window).load(function() {"
-			    $(function () {
-			      // Slideshow 4
-			      $("#slider4").responsiveSlides({
-			        auto: true,
-			        pager:true,
-			        nav:false,
-			        speed: 500,
-			        namespace: "callbacks",
-			        before: function () {
-			          $('.events').append("<li>before event fired.</li>");
-			        },
-			        after: function () {
-			          $('.events').append("<li>after event fired.</li>");
-			        }
-			      });
-			
-			    });
-			  </script>
-	</div>
-	<div class="clearfix"> </div>
-</div>
-	<div class="shop">
-		<a href="single.html">SHOP COLLECTION NOW</a>
-	</div>
 	</div>
 		</div>
-		<!-- content-section-starts-here -->
-		<div class="container">
-			<div class="main-content">
-				<div class="online-strip">
-					<div class="col-md-4 follow-us">
-						<h3>follow us : <a class="twitter" href="#"></a><a class="facebook" href="#"></a></h3>
-					</div>
-					<div class="col-md-4 shipping-grid">
-						<div class="shipping">
-							<img src="images/shipping.png" alt="" />
-						</div>
-						<div class="shipping-text">
-							<h3>Free Shipping</h3>
-							<p>on orders over $ 199</p>
-						</div>
-						<div class="clearfix"></div>
-					</div>
-					<div class="col-md-4 online-order">
-						<p>Order online</p>
-						<h3>Tel:999 4567 8902</h3>
-					</div>
-					<div class="clearfix"></div>
-				</div>
-				<div class="products-grid">
-				<header>
-					<h3 class="head text-center">Latest Products</h3>
-				</header>
-					<div class="col-md-4 product simpleCart_shelfItem text-center">
-						<a href="single.html"><img src="images/p1.jpg" alt="" /></a>
-						<div class="mask">
-							<a href="single.html">Quick View</a>
-						</div>
-						<a class="product_name" href="single.html">Sed ut perspiciatis</a>
-						<p><a class="item_add" href="#"><i></i> <span class="item_price">$329</span></a></p>
-					</div>
-					<div class="col-md-4 product simpleCart_shelfItem text-center">
-						<a href="single.html"><img src="images/p2.jpg" alt="" /></a>
-						<div class="mask">
-							<a href="single.html">Quick View</a>
-						</div>
-						<a class="product_name" href="single.html">great explorer</a>
-						<p><a class="item_add" href="#"><i></i> <span class="item_price">$599.8</span></a></p>
-					</div>
-					<div class="col-md-4 product simpleCart_shelfItem text-center">
-						<a href="single.html"><img src="images/p3.jpg" alt="" /></a>
-						<div class="mask">
-							<a href="single.html">Quick View</a>
-						</div>
-						<a class="product_name" href="single.html">similique sunt</a>
-						<p><a class="item_add" href="#"><i></i> <span class="item_price">$359.6</span></a></p>
-					</div>
-					<div class="col-md-4 product simpleCart_shelfItem text-center">
-						<a href="single.html"><img src="images/p4.jpg" alt="" /></a>
-						<div class="mask">
-							<a href="single.html">Quick View</a>
-						</div>
-						<a class="product_name" href="single.html">shrinking </a>
-						<p><a class="item_add" href="#"><i></i> <span class="item_price">$649.99</span></a></p>
-					</div>
-					<div class="col-md-4 product simpleCart_shelfItem text-center">
-						<a href="single.html"><img src="images/p5.jpg" alt="" /></a>
-						<div class="mask">
-							<a href="single.html">Quick View</a>
-						</div>
-						<a class="product_name" href="single.html">perfectly simple</a>
-						<p><a class="item_add" href="#"><i></i> <span class="item_price">$750</span></a></p>
-					</div>
-					<div class="col-md-4 product simpleCart_shelfItem text-center">
-						<a href="single.html"><img src="images/p6.jpg" alt="" /></a>
-						<div class="mask">
-							<a href="single.html">Quick View</a>
-						</div>
-						<a class="product_name" href="single.html">equal blame</a>
-						<p><a class="item_add" href="#"><i></i> <span class="item_price">$295.59</span></a></p>
-					</div>
-					<div class="col-md-4 product simpleCart_shelfItem text-center">
-						<a href="single.html"><img src="images/p7.jpg" alt="" /></a>
-						<div class="mask">
-							<a href="single.html">Quick View</a>
-						</div>
-						<a class="product_name" href="single.html">Neque porro</a>
-						<p><a class="item_add" href="#"><i></i> <span class="item_price">$380</span></a></p>
-					</div>
-					<div class="col-md-4 product simpleCart_shelfItem text-center">
-						<a href="single.html"><img src="images/p8.jpg" alt="" /></a>
-						<div class="mask">
-							<a href="single.html">Quick View</a>
-						</div>
-						<a class="product_name" href="single.html">perfectly simple</a>
-						<p><a class="item_add" href="#"><i></i> <span class="item_price">$540.6</span></a></p>
-					</div>
-					<div class="col-md-4 product simpleCart_shelfItem text-center">
-						<a href="single.html"><img src="images/p9.jpg" alt="" /></a>
-						<div class="mask">
-							<a href="single.html">Quick View</a>
-						</div>
-						<a class="product_name" href="single.html">praising pain</a>
-						<p><a class="item_add" href="#"><i></i> <span class="item_price">$229.5</span></a></p>
-					</div>
-					<div class="clearfix"></div>
-				</div>
+		<!-- registration-form -->
+<!--<div class="registration-form">
+	<div class="container">
+	<div class="dreamcrub">
+			   	 <ul class="breadcrumbs">
+                    <li class="home">
+                       <a href="index.html" title="Go to Home Page">Home</a>&nbsp;
+                       <span>&gt;</span>
+                    </li>
+                    <li class="women">
+                       Registration
+                    </li>
+                </ul>-->
+<!--                <ul class="previous">
+                	<li><a href="index.html">Back to Previous Page</a></li>
+                </ul>-->
+                <div class="clearfix"></div>
+<!--		Customer section	   </div>-->
+		<h2>Registration</h2>
+		<div class="registration-grids">
+			<div class="reg-form">
+				<div class="reg">
+					 <p>Welcome, please enter the following details to continue.</p>
+					 <p>If you have previously registered with us, <a href="#">click here</a></p>
+					 <form>
+						 <ul>
+							 <li class="text-info">First Name: </li>
+							 <li><input type="text" value=""></li>
+						 </ul>
+						 <ul>
+							 <li class="text-info">Last Name: </li>
+							 <li><input type="text" value=""></li>
+						 </ul>				 
+						<ul>
+							 <li class="text-info">Email: </li>
+							 <li><input type="text" value=""></li>
+						 </ul>
+						 <ul>
+							 <li class="text-info">Password: </li>
+							 <li><input type="password" value=""></li>
+						 </ul>
+						 <ul>
+							 <li class="text-info">Re-enter Password:</li>
+							 <li><input type="password" value=""></li>
+						 </ul>
+						 <ul>
+							 <li class="text-info">Mobile Number:</li>
+							 <li><input type="text" value=""></li>
+						 </ul>	
+                                                <ul>
+							 <li class="text-info">Billing Address:</li>
+							 <li><input type="text" value=""></li>
+						 </ul>	
+						 <input type="submit" value="REGISTER NOW">
+						 <p class="click">By clicking this button, you are agree to my  <a href="#">Policy Terms and Conditions.</a></p> 
+					 </form>
+				 </div>
 			</div>
-
+			<div class="reg-right">
+				 <h3>Completely Free Account</h3>
+				 <div class="strip"></div>
+				 <p>Pellentesque neque leo, dictum sit amet accumsan non, dignissim ac mauris. Mauris rhoncus, lectus tincidunt tempus aliquam, odio 
+				 libero tincidunt metus, sed euismod elit enim ut mi. Nulla porttitor et dolor sed condimentum. Praesent porttitor lorem dui, in pulvinar enim rhoncus vitae. Curabitur tincidunt, turpis ac lobortis hendrerit, ex elit vestibulum est, at faucibus erat ligula non neque.</p>
+				 <h3 class="lorem">Lorem ipsum dolor.</h3>
+				 <div class="strip"></div>
+				 <p>Tincidunt metus, sed euismod elit enim ut mi. Nulla porttitor et dolor sed condimentum. Praesent porttitor lorem dui, in pulvinar enim rhoncus vitae. Curabitur tincidunt, turpis ac lobortis hendrerit, ex elit vestibulum est, at faucibus erat ligula non neque.</p>
+			</div>
+			<div class="clearfix"></div>
 		</div>
-		<div class="other-products">
-		<div class="container">
-			<h3 class="like text-center">Featured Collection</h3>        			
-				     <ul id="flexiselDemo3">
-						<li><a href="single.html"><img src="images/l1.jpg" class="img-responsive" alt="" /></a>
-							<div class="product liked-product simpleCart_shelfItem">
-							<a class="like_name" href="single.html">perfectly simple</a>
-							<p><a class="item_add" href="#"><i></i> <span class=" item_price">$759</span></a></p>
-							</div>
-						</li>
-						<li><a href="single.html"><img src="images/l2.jpg" class="img-responsive" alt="" /></a>						
-							<div class="product liked-product simpleCart_shelfItem">
-							<a class="like_name" href="single.html">praising pain</a>
-							<p><a class="item_add" href="#"><i></i> <span class=" item_price">$699</span></a></p>
-							</div>
-						</li>
-						<li><a href="single.html"><img src="images/l3.jpg" class="img-responsive" alt="" /></a>
-							<div class="product liked-product simpleCart_shelfItem">
-							<a class="like_name" href="single.html">Neque porro</a>
-							<p><a class="item_add" href="#"><i></i> <span class=" item_price">$329</span></a></p>
-							</div>
-						</li>
-						<li><a href="single.html"><img src="images/l4.jpg" class="img-responsive" alt="" /></a>
-							<div class="product liked-product simpleCart_shelfItem">
-							<a class="like_name" href="single.html">equal blame</a>
-							<p><a class="item_add" href="#"><i></i> <span class=" item_price">$499</span></a></p>
-							</div>
-						</li>
-						<li><a href="single.html"><img src="images/l5.jpg" class="img-responsive" alt="" /></a>
-							<div class="product liked-product simpleCart_shelfItem">
-							<a class="like_name" href="single.html">perfectly simple</a>
-							<p><a class="item_add" href="#"><i></i> <span class=" item_price">$649</span></a></p>
-							</div>
-						</li>
-				     </ul>
-				    <script type="text/javascript">
-					 $(window).load(function() {
-						$("#flexiselDemo3").flexisel({
-							visibleItems: 4,
-							animationSpeed: 1000,
-							autoPlay: true,
-							autoPlaySpeed: 3000,    		
-							pauseOnHover: true,
-							enableResponsiveBreakpoints: true,
-					    	responsiveBreakpoints: { 
-					    		portrait: { 
-					    			changePoint:480,
-					    			visibleItems: 1
-					    		}, 
-					    		landscape: { 
-					    			changePoint:640,
-					    			visibleItems: 2
-					    		},
-					    		tablet: { 
-					    			changePoint:768,
-					    			visibleItems: 3
-					    		}
-					    	}
-					    });
-					    
-					});
-				   </script>
-				   <script type="text/javascript" src="js/jquery.flexisel.js"></script>
-				   </div>
-				   </div>
-		<!-- content-section-ends-here -->
+<!--	</div>
+</div>-->
+<!-- registration-form -->
+
 		<div class="news-letter">
 			<div class="container">
 				<div class="join">
@@ -438,7 +279,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="container">
 		 <div class="footer_top">
 			<div class="span_of_4">
-				<div class="col-md-3 span1_of_4">
+<!--				<div class="col-md-3 span1_of_4">
 					<h4>Shop</h4>
 					<ul class="f_nav">
 						<li><a href="#">new arrivals</a></li>
@@ -451,16 +292,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<li><a href="#">sale</a></li>
 						<li><a href="#">style videos</a></li>
 					</ul>	
-				</div>
+				</div>-->
 				<div class="col-md-3 span1_of_4">
 					<h4>help</h4>
 					<ul class="f_nav">
 						<li><a href="#">frequently asked  questions</a></li>
-						<li><a href="#">men</a></li>
-						<li><a href="#">women</a></li>
+<!--						<li><a href="#">men</a></li>
+						<li><a href="#">women</a></li>-->
 						<li><a href="#">accessories</a></li>
-						<li><a href="#">kids</a></li>
-						<li><a href="#">brands</a></li>
+<!--						<li><a href="#">kids</a></li>
+						<li><a href="#">brands</a></li>-->
 					</ul>	
 				</div>
 				<div class="col-md-3 span1_of_4">
@@ -468,13 +309,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<ul class="f_nav">
 						<li><a href="account.html">login</a></li>
 						<li><a href="register.html">create an account</a></li>
-						<li><a href="#">create wishlist</a></li>
-						<li><a href="checkout.html">my shopping bag</a></li>
-						<li><a href="#">brands</a></li>
-						<li><a href="#">create wishlist</a></li>
+<!--						<li><a href="#">create wishlist</a></li>
+						<li><a href="checkout.html">my shopping bag</a></li>-->
+						<li><a href="#">Your Brand</a></li>
+<!--						<li><a href="#">create wishlist</a></li>-->
 					</ul>				
 				</div>
-				<div class="col-md-3 span1_of_4">
+<!--				<div class="col-md-3 span1_of_4">
 					<h4>popular</h4>
 					<ul class="f_nav">
 						<li><a href="#">new arrivals</a></li>
@@ -489,7 +330,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<li><a href="#">login</a></li>
 						<li><a href="#">brands</a></li>
 					</ul>			
-				</div>
+				</div>-->
 				<div class="clearfix"></div>
 				</div>
 		  </div>
@@ -497,7 +338,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<img src="images/cards.jpg" alt="" />
 		  </div>
 		  <div class="copyright text-center">
-				<p>© 2015 Eshop. All Rights Reserved | Design by   <a href="http://w3layouts.com">  W3layouts</a></p>
+				<p>© 2017 Eshop. All Rights Reserved </p>
 		  </div>
 		</div>
 		</div>
